# fomc-agent

./: .env.local  .env.localstack  .env.shared  .gitignore  app.py  aws_setup.md  docker-compose.yml  draft-email-anthony.md  pyproject.toml
.run/: Analytics (AWS).run.xml  Analytics (LocalStack).run.xml  Build AWS Observability (AWS).run.xml  Build BLS Timeline (AWS).run.xml  Build BLS Timeline (LocalStack).run.xml  CDK Deploy (AWS).run.xml  CDK Diff (AWS).run.xml  Docker Compose Up.run.xml  Fetch Data (AWS).run.xml  Fetch Data (LocalStack).run.xml  Fetch DataUSA (AWS).run.xml  Fetch DataUSA (LocalStack).run.xml  Invoke Fetcher Lambda (LocalStack).run.xml  LocalStack CDC Demo (Live).run.xml  LocalStack CDC Demo.run.xml  LocalStack Check S3 Assets.run.xml  LocalStack Down (CLI).run.xml  LocalStack Full Refresh + CDC Live.run.xml  LocalStack Full Refresh.run.xml  LocalStack Up (CLI).run.xml  LocalStack Validate.run.xml  LocalStack Worker (Analytics).run.xml  LocalStack Worker Stop.run.xml  Parse to Processed (AWS).run.xml  Parse to Processed (LocalStack).run.xml  Run Tests.run.xml  Seed LocalStack.run.xml  Touch DataUSA (LocalStack).run.xml
cdk.out/: FomcComputeStack.assets.json  FomcComputeStack.template.json  FomcMessagingStack.assets.json  FomcMessagingStack.template.json  FomcSiteStack.assets.json  FomcSiteStack.template.json  FomcStorageStack.assets.json  FomcStorageStack.template.json  manifest.json  tree.json
docs/: adr-004-cdk-as-iac.md  architecture-stacks.puml  aws-allowmixing-component-deployment.puml  aws-hourly-runtime-sequence.puml  aws-service-tutorials.md  (+9 more)
(+145 files in other folders)
